odified and added files

--- a/1. fundamentals.ipynb
+++ b/1. fundamentals.ipynb
@@ -98,9 +98,13 @@
   {
    "cell_type": "markdown",
    "id": "448fa734-eaeb-4245-8614-2c806bf2a42f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Blueprints\n",
+    "# The Blueprint Library (carla.BlueprintLibrary) is a summary of all carla.ActorBlueprint \n",
+    "    blueprints = [bp for bp in world.get_blueprint_library().filter('*')]\n",
+    "    \n",
     "    These layouts allow the user to smoothly incorporate new actors into the simulation.\n",
     "    They are already-made models with animations and a series of attributes.\n",
     "    \n",
@@ -207,7 +211,9 @@
   {
    "cell_type": "markdown",
    "id": "22508715-195a-41bc-80e0-69892bdf08eb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### spectator is the camera "
    ]
