--- a/2. positioning.ipynb
+++ b/2. positioning.ipynb
@@ -127,7 +127,9 @@
   {
    "cell_type": "markdown",
    "id": "b772e584-6c31-435c-9d5c-37c9ea33ec56",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### topology is pairs of waypoints defining all roads - tuples of those"
    ]
