--- a/3. basic_camera.ipynb
+++ b/3. basic_camera.ipynb
@@ -46,12 +46,14 @@
    },
    "outputs": [],
    "source": [
+    "# It does not necessary to load again once it download\n",
+    "\n",
     "#client.load_world('Town05')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7a45ca01-f802-418b-9bc6-b14a6bdcc1a0",
    "metadata": {
     "tags": []
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0ecb0a71-23ba-435b-946f-42628b67dd58",
    "metadata": {
     "tags": []
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2c46a9b5-9683-4b3b-889e-831965931c4c",
    "metadata": {
     "tags": []
@@ -85,10 +87,10 @@
     {
      "data": {
       "text/plain": [
-       "<carla.libcarla.ActorBlueprint at 0x22215011230>"
+       "<carla.libcarla.ActorBlueprint at 0x18f0c280230>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "42939872-9b60-4385-91f2-e4f240b76d24",
    "metadata": {
     "tags": []
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9fa6b536-a486-446a-acbf-13fd6e0aae97",
    "metadata": {
     "tags": []
@@ -142,7 +144,7 @@
     "camera_bp.set_attribute('image_size_x', '640') #640 pixels tall\n",
     "camera_bp.set_attribute('image_size_y', '360') #360 pixels wide\n",
     "\n",
-    "camera_init_trans=carla.Transform(carla.Location(z=CAMERA_POS_Z, x=CAMERA_POS _X))\n",
+    "camera_init_trans=carla.Transform(carla.Location(z=CAMERA_POS_Z, x=CAMERA_POS_X))\n",
     "camera = world.spawn_actor(camera_bp,camera_init_trans,attach_to=vehicle)"
    ]
   },
@@ -171,8 +173,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b667fc3-4ce2-4dc7-aeee-f9414f2f542e",
+   "metadata": {},
+   "source": [
+    "# get_attribute(self, id) :\n",
+    "    Returns the actor's attribute with id as identifier if existing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "b2eb0a31-c752-4358-a04e-80a84d764a88",
    "metadata": {
     "tags": []
@@ -188,6 +199,30 @@
     "camera_data={'image':np.zeros((image_h, image_w, 4))}\n",
     "\n",
     "camera.listen(lambda image:camera_callback(image, camera_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4d80d5f7-6751-4842-adc3-c1b8dd3d3997",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# camera.listen(lambda image:image.save_to_disk('out/%06d.png'% image.frame))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe1747a-7c6f-4c29-968e-c6199ab426d1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# camera.stop()"
    ]
   },
   {
@@ -210,9 +245,30 @@
     }
    ],
    "source": [
-    "img=camera_data['image']\n",
-    "cv2.imshow('RGB Camera', img)\n",
-    "cv2.waitKey(0)"
+    "# img=camera_data['image']\n",
+    "# cv2.imshow('RGB Camera', img)\n",
+    "# cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12e5e027-8833-49a0-b608-ed75c4006c84",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# cv2.namedWindow('RGB Camera', cv2.WINDOW_AUTOSIZE)\n",
+    "# cv2.imshow('RGB Camera', camera_data['image'])\n",
+    "# cv2.waitKey(1)\n",
+    "\n",
+    "# while cv2.waitKey(0)==-1:\n",
+    "#     cv2.imshow('RGB Camera', camera_data['image'])\n",
+    "#     # if cv2.waitKey(1)==ord('q'):\n",
+    "#         break\n",
+    "    \n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
@@ -225,12 +281,21 @@
    "outputs": [],
    "source": [
     "camera.stop() #this is the opposite of camera.listen\n",
+    "\n",
     "for actor in world.get_actors().filter('*vehicle*'):\n",
     "    actor.destroy()\n",
     "    \n",
     "for sensor in world.get_actors().filter('*sensor*'):\n",
     "    sensor.destroy()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e07a7076-1f1d-420f-a4d6-e7c2a7119114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
