modified files and added file

--- a/1. fundamentals.ipynb
+++ b/1. fundamentals.ipynb
@@ -14,9 +14,11 @@
    "metadata": {},
    "source": [
     "# Actors\n",
-    "    Actors are the elements that perform actions within the simulation, and they can affect other actors.\n",
-    "\n",
-    "    They include vehicles, walkers, sensors, traffic signs, traffic lights and the spectator."
+    "    CARLA defines actors as anything that plays a role in the simulation or can be moved around. \n",
+    "    \n",
+    "    That includes: pedestrians, vehicles, sensors and traffic signs (considering traffic lights as part of these). \n",
+    "    \n",
+    "    Actors are spawned in the simulation by carla.World and they need for a carla.ActorBlueprint to be created. "
    ]
   },
   {
@@ -205,17 +207,19 @@
    "metadata": {},
    "source": [
     "# carla.Transform(self, location, rotation) \n",
-    "    Class that defines a transformation, a combination of location and rotation, without scaling."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22508715-195a-41bc-80e0-69892bdf08eb",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### spectator is the camera "
+    "    Class that defines a transformation, a combination of location and rotation, without scaling.\n",
+    "    \n",
+    "# transform(self, in_point)\n",
+    "    Translates a 3D point from local to global coordinates using the current transformation as frame of reference.\n",
+    "    \n",
+    "    in_point(carla.Location) : Location in the space to which the transformation will be applied.\n",
+    "    \n",
+    "# spectator \n",
+    "    is a view into the simulation.\n",
+    "    You can fly the spectator around the world using the mouse to control the pitch\n",
+    "    \n",
+    "# set_transform(self, transform)\n",
+    "    Teleports the actor to a given transform (location and rotation)."
    ]
   },
   {
@@ -257,8 +261,17 @@
    "id": "ee78acac-7d92-469d-aa20-d496c44488d9",
    "metadata": {},
    "source": [
-    "### Autopilot mode will subscribe a vehicle to the Traffic Manager to simulate real urban conditions. \n",
-    "### This module is hard-coded, not based on machine learning."
+    "# get_actors(self, actor_ids=None) :\n",
+    "    Retrieves a list of carla.Actor elements, either using a list of IDs provided or just listing everyone on stage. If an ID does not correspond with any actor, it will be excluded from the list returned, meaning that both the list of IDs and the list of actors may have different lengths.\n",
+    "\n",
+    "    Parameters:\n",
+    "    actor_ids (list) - The IDs of the actors being searched. By default it is set to None and returns every actor on scene.\n",
+    "\n",
+    "# set_autopilot(self, enabled=True, port=8000) :\n",
+    "    Registers or deletes the vehicle from a Traffic Manager's list. When True, the Traffic Manager passed as parameter will move the vehicle around. The autopilot takes place client-side.\n",
+    "    Parameters:\n",
+    "    enabled (bool)\n",
+    "    port (uint16) - The port of the TM-Server where the vehicle is to be registered or unlisted. If None is passed, it will consider a TM at default port 8000."
    ]
   },
   {
