--- a/3. basic_camera.ipynb
+++ b/3. basic_camera.ipynb
@@ -129,6 +129,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47438390-7ceb-45a1-a546-335f7ee1258a",
+   "metadata": {},
+   "source": [
+    "# set_attribute(self, id, value) :\n",
+    "    If the id attribute is modifiable, changes its value to value.\n",
+    "    id (str) - The identifier for the attribute that is intended to be changed.\n",
+    "    value (str) - The new value for said attribute."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ed1dbb44-e935-4c03-9df3-adbe83c18bdb",
